log
Thu 09 May 2024 03:20:36 PM UTC: 
 tests:  1|8
total_score: 0/70
c0a4a0b
Thu 09 May 2024 03:28:03 PM UTC: 
 treemap.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
fee5a0a
Thu 09 May 2024 03:31:39 PM UTC: 
 treemap.c | 11 +++++++----
 1 file changed, 7 insertions(+), 4 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:76:43: error: expected ‘)’ before ‘{’ token
   76 |     if(is_equal(tree, key, aux->pair->key){
      |       ~                                   ^
      |                                           )
treemap.c:81:3: error: expected expression before ‘}’ token
   81 |   }
      |   ^
treemap.c:82:1: error: control reaches end of non-void function [-Werror=return-type]
   82 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
b308d53
Thu 09 May 2024 03:35:09 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:76:43: error: expected ‘)’ before ‘{’ token
   76 |     if(is_equal(tree, key, aux->pair->key){
      |       ~                                   ^
      |                                           )
treemap.c:80:3: error: expected expression before ‘}’ token
   80 |   }
      |   ^
Compilation failed
d78f23a
Thu 09 May 2024 03:48:29 PM UTC: 
 treemap.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
9586bc4
Thu 09 May 2024 04:10:10 PM UTC: 
 treemap.c | 27 +++++++++++++++++++++++++++
 1 file changed, 27 insertions(+)
 tests:  11|6
total_score: 15/70
29cda83
Thu 09 May 2024 04:11:24 PM UTC: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
3ae7725
Sun 12 May 2024 02:30:49 PM UTC: 
 treemap.c | 29 ++++++++++++++++++-----------
 1 file changed, 18 insertions(+), 11 deletions(-)
 tests:  12|6
total_score: 15/70
411adc4
Sun 12 May 2024 02:31:43 PM UTC: 
 treemap.c | 16 ++++++++++++++--
 1 file changed, 14 insertions(+), 2 deletions(-)
test.c: In function ‘insertTreeMap’:
test.c:503:5: error: ‘main’ is normally a non-static function [-Werror=main]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:606:1: error: expected declaration or statement at end of input
  606 | }
      | ^
At top level:
test.c:503:5: error: ‘main’ defined but not used [-Werror=unused-function]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
a733521
